@@ -9,6 +9,7 @@ CHANGES
 Added datetime conversion dialog
 Changes to make more compatible with matplotlib 2.0
 Can now plot grouped single plots for some plot types (line, bar, scatter)
+Fixed sharey, sharex for grouped plots
 Added ability to choose pre-defined mpl styles
 Fix to memory leak on redraws
 Changes to right click copy behaviour
